--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.current-company {
+  border-radius: 4px;
+  border-color: #1bb0f5;
+  border-width: 5px;
+}
