--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,14 @@ body {
 }
 
 .current-company {
-  border-radius: 4px;
+  border-radius: 15px;
+  border-style: solid;
   border-color: #1bb0f5;
+  border-width: 5px;
+}
+.company {
+  border-radius: 15px;
+  border-style: solid;
+  border-color: #fff;
   border-width: 5px;
 }
